--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     </div>
                     <div class="information_age">
                         <h1 class="h1">Age:</h1>
-                        <h1 class="h2">16 Years</h1>
+                        <h1 class="h2">17 Years</h1>
                     </div>
                     <div class="information_email">
                         <h1 class="h1">Email:</h1>
@@ -132,7 +132,7 @@
                         <h1>Follow me</h1>
                     </div>
                     <div class="logo2">
-                        <a href="https://www.instagram.com/davlat__farruxov/">
+                        <a href="https://www.instagram.com/davlat.farruxov/">
                             <img src="img/Б.png" alt="">
                         </a>
                         <a href="https://www.pinterest.com/davlatfarruxov/_saved/">
